--- a/app/views/exam_authorization_requests/_pending.html.erb
+++ b/app/views/exam_authorization_requests/_pending.html.erb
@@ -5,4 +5,8 @@
         end_time: l(authorization_request.exam_registration.end_time, format: :long),
         location: Organization.current.time_zone,
         edit_path: url_for(authorization_request.exam_registration) %>
+<% else %>
+  <%= t :exam_authorization_pending_done_html,
+        end_time: l(authorization_request.exam_registration.end_time, format: :long),
+        location: Organization.current.time_zone %>
 <% end %>
