--- a/app/views/discussions/_message.html.erb
+++ b/app/views/discussions/_message.html.erb
@@ -7,9 +7,7 @@
           <span class="moderator-badge"><%= t(:moderation) %></span>
         <% end %>
         <span class="message-date">
-          <time title="<%= message.created_at %>">
-            <%= t(:time_since, time: time_ago_in_words(message.created_at)) %>
-          </time>
+          <%= friendly_time(message.created_at, :time_since) %>
         </span>
         <span class="actions">
           <% if message.authorized?(current_user) && !message.deleted? %>
@@ -49,9 +47,7 @@
           <% if current_user&.moderator_here? %>
             <hr>
             <%= t :deleted_by, deleter: message.deleted_by.name %>
-            <time title="<%= message.created_at %>">
-              <%= t(:time_since, time: time_ago_in_words(message.deleted_at)) %>.
-            </time>
+            <%= friendly_time(message.deleted_at, :time_since) %>
             <a href='<%= "#deletedMessage#{message.id}" %>' data-bs-toggle="collapse">
               <%= t :show_message %>
             </a>
