--- a/app/views/users/_user_form.html.erb
+++ b/app/views/users/_user_form.html.erb
@@ -31,11 +31,7 @@
       <span> <strong><%= t :email %>:</strong> <%= @user.email %> </span>
     </div>
     <div>
-      <span> <strong><%= t :programming_since %>:</strong>
-        <time title="<%= @user.created_at %>">
-          <%= t(:time_since, time: time_ago_in_words(@user.created_at)) %>
-        </time>
-      </span>
+      <span> <strong><%= t :programming_since %>:</strong> <%= friendly_time(@user.created_at, :time_since) %> </span>
     </div>
   </div>
 </div>
