--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -38,9 +38,7 @@
                 <%= render partial: "notifications/#{notification.subject}", locals: { notification: notification } %>
               </td>
               <td class="col-md-3">
-                <time title="<%= notification.created_at %>">
-                  <%= t(:time_since, time: time_ago_in_words(notification.created_at)) %>
-                </time>
+                <%= friendly_time(notification.created_at, :time_since) %>
               </td>
             </tr>
           <% end %>
