--- a/app/views/discussions/new.html.erb
+++ b/app/views/discussions/new.html.erb
@@ -28,6 +28,11 @@
         </div>
       </div>
     </div>
+    <% if faqs_enabled_here? %>
+      <div class="fs-7">
+        <%= fa_icon('exclamation-triangle', text: t(:only_forum_questions_on_forum, link: link_to_faqs).html_safe) %>
+      </div>
+    <% end %>
     <%= f.submit t(:publish_discussion), class: 'btn btn-complementary w-100 discussion-new-message-button' %>
   <% end %>
 <% end %>
