Replace discussion creation editor with a nicer, markdown-enabled one

--- a/app/views/discussions/new.html.erb
+++ b/app/views/discussions/new.html.erb
@@ -22,7 +22,8 @@
         <div class="container-fluid">
           <div class="row">
             <div class="discussion-new-message-content">
-              <%= f.editor :description, '', {id: 'discussion-new-message', class: 'form-control', placeholder: t(:discussion_description_placeholder)} %>
+              <%= spell_checked_editor 'discussion[description]',
+                                       { id: 'discussion-new-message', placeholder: t(:discussion_description_placeholder) } %>
             </div>
           </div>
         </div>
