--- a/app/views/user_mailer/notifications/_custom_notification.html.erb
+++ b/app/views/user_mailer/notifications/_custom_notification.html.erb
@@ -1,11 +1,11 @@
-<%= target = @notification.target %>
+<% target = @notification.target %>
 <% if target.custom_html.present? %>
   <%= render inline: target.custom_html %>
 <% else %>
   <%= render partial: 'user_mailer/mail_template', locals: {
     title: t("mailer.title.custom"),
     subtitle: '',
-    text: target.body_html,
+    text: target.body_html.html_safe,
     button: t("mailer.button.custom"),
     url: @organization.url_for('/user/notifications')
   } %>
