--- a/app/views/users/notifications.html.erb
+++ b/app/views/users/notifications.html.erb
@@ -34,8 +34,10 @@
               <td class="col-md-1">
                 <%= link_to icon_for_read(notification.read?), "notifications/#{notification.id}/toggle_read", tooltip_options(:toggle_read).merge(method: :post, role: :button) %>
               </td>
-              <td class="col-md-8 text-break">
-                <%= render partial: "notifications/#{notification.subject}", locals: { notification: notification } %>
+              <td class="col-md-8 text-break mu-notifications-content">
+                <button class="mu-notifications-arrow" onclick="$(this).parent().toggleClass('opened')"><i class="fas fa-fw fa-angle-down"></i></button>
+                <div class="mu-notifications-title"><%= render partial: "notifications/titles/#{notification.subject}", locals: { notification: notification } %></div>
+                <div class="mu-notifications-body"><%= render partial: "notifications/#{notification.subject}", locals: { notification: notification } %></div>
               </td>
               <td class="col-md-3">
                 <%= friendly_time(notification.created_at, :time_since) %>
@@ -51,4 +53,3 @@
     <% end %>
   </div>
 </div>
-
