--- a/app/views/discussions/_message.html.erb
+++ b/app/views/discussions/_message.html.erb
@@ -13,6 +13,10 @@
           <% if message.authorized?(current_user) && !message.deleted? %>
             <% if current_user&.moderator_here? %>
               <a class="discussion-message-approved <%= 'selected' if message.approved? %>"
+                 <% if message.approved? && current_user&.forum_supervisor_here? %>
+                   data-bs-toggle="tooltip" data-bs-placement="left"
+                   title="<%= t :approved_by, validator: message.approved_by.name, date: local_time(message.approved_at) %>"
+                 <% end %>
                  onclick="mumuki.Forum.discussionMessageToggleApprove('<%= approve_discussion_message_url(@discussion, message) %>', $(this))">
                 <%= fa_icon(:check, class: 'fa-lg') %>
               </a>
