--- a/app/views/user_mailer/_mail_template.erb
+++ b/app/views/user_mailer/_mail_template.erb
@@ -4,14 +4,20 @@
 
 <div style="background-color: #F2F5F8; width: 100%; height: 100%; padding: 32px; box-sizing: border-box; font-family: Lato, sans-serif; ">
   <div style="max-width: 640px; margin: auto;">
-    <div style="height: 85px; width: 100%; padding: 24px 32px; ">
-      <img src="https://mumuki.io/logo-alt-large.png" alt="Mumuki" style="object-fit: cover; height: 100%;">
+    <div style="height: 40px; padding: 24px 32px; ">
+      <img src="https://mumuki.io/logo-alt-large.png" alt="Mumuki" style="object-fit: cover; height: 100%;" height="40">
     </div>
 
     <div style="background-color: white; padding: 32px; ">
       <h1 style="font-size: 24px; line-height: 32px; margin-bottom: 32px; text-align: start;">
         <%= title %>
       </h1>
+
+      <% if defined?(subtitle) && subtitle.present? %>
+        <div style="font-size: 16px; line-height: 24px; color: #333333; padding-bottom: 10px;">
+          <%= subtitle %>
+        </div>
+      <% end %>
 
       <div style="font-size: 16px; line-height: 24px; color: #333333; padding-bottom: 32px;">
         <%= text %>
