--- a/app/views/users/_basic_profile_fields.html.erb
+++ b/app/views/users/_basic_profile_fields.html.erb
@@ -1,19 +1,23 @@
-<fieldset>
-  <div><%= form.label(t :first_name) %></div>
-  <div><%= form.text_field :first_name, required: true, class: 'form-control' %></div>
-</fieldset>
-<fieldset>
-  <div><%= form.label(t :last_name) %></div>
-  <div><%= form.text_field :last_name, required: true, class: 'form-control' %></div>
-</fieldset>
-<fieldset>
-  <div><%= form.label(t :gender) %></div>
-  <div><%= form.select :gender, options_for_select(User.genders.map { |gender, _| [t(gender), gender] }, @user.gender), {}, required: true, class: 'form-control form-select' %></div>
-</fieldset>
-<fieldset>
-  <div><%= form.label(t :birthdate) %></div>
-  <div><%= form.date_field :birthdate, min: Date.new(1900), max: 3.years.ago.end_of_year, required: true, class: 'form-control' %></div>
-</fieldset>
+<div class="row">
+  <fieldset class="col-lg-6">
+    <div><%= form.label(t :first_name) %></div>
+    <div><%= form.text_field :first_name, required: true, class: 'form-control' %></div>
+  </fieldset>
+  <fieldset class="col-lg-6">
+    <div><%= form.label(t :last_name) %></div>
+    <div><%= form.text_field :last_name, required: true, class: 'form-control' %></div>
+  </fieldset>
+</div>
+<div class="row">
+  <fieldset class="col-lg-4">
+    <div><%= form.label(t :birthdate) %></div>
+    <div><%= form.date_field :birthdate, min: Date.new(1900), max: 3.years.ago.end_of_year, required: true, class: 'form-control' %></div>
+  </fieldset>
+  <fieldset class="col-lg-4 offset-lg-2">
+    <div><%= form.label(t :gender) %></div>
+    <div><%= form.select :gender, options_for_select(User.genders.map { |gender, _| [t(gender), gender] }, @user.gender), {}, required: true, class: 'form-control form-select' %></div>
+  </fieldset>
+</div>
 <fieldset>
   <div><%= form.label(t :email) %></div>
   <div><%= form.text_field :email, readonly: true, class: 'form-control' %></div>
