--- a/app/views/discussions/show.html.erb
+++ b/app/views/discussions/show.html.erb
@@ -26,7 +26,7 @@
         <%= render partial: 'discussions/description_message', locals: { discussion: @discussion } %>
       <% end %>
       <% @discussion.visible_messages.each do |message| %>
-        <%= render partial: 'discussions/message', locals: { user: message.sender_user, message: message } %>
+        <%= render partial: 'discussions/message', locals: { user: message.sender, message: message } %>
       <% end %>
       <% if @discussion.commentable_by?(current_user) %>
         <hr class="message-divider">
