--- a/app/views/users/_user_delete_modal.html.erb
+++ b/app/views/users/_user_delete_modal.html.erb
@@ -6,35 +6,43 @@
 </script>
 
 <div class="modal fade" id="user-delete-account-modal" tabindex="-1" role="dialog">
-  <div class="modal-dialog">
+  <div class="modal-dialog d-table">
     <div class="modal-content">
       <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title"><%= t :delete_account %></h4>
+        <h3 class="modal-title"><%= t :delete_account %></h4>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
         <div class="container-fluid">
           <div class="row">
-            <%= t :delete_account_modal_explain_html, name: @user.name %>
+            <p><%= t :delete_account_modal_explain_html, name: @user.name %></p>
+          </div>
+          <% if @user.student_granted_organizations.present? %>
+            <div class="row">
+              <p><%= t :delete_account_modal_lost_permissions %></p>
+            </div>
+            <div class="row">
+              <% @user.student_granted_organizations.each do |organization| %>
+                <div class="col-md-4 text-center">
+                  <%= image_tag(organization.banner_url, width: '100%', class: 'pull-left') %>
+                  <p><%= organization.name %></p>
+                </div>
+              <% end %>
+            </div>
+          <% end %>
+          <div class="row">
+            <p>
+              <%= t :delete_account_confirmation_request %>:
+              <br>
+              <b><%= t :delete_account_confirmation_text %></b>
+            </p>
           </div>
           <div class="row">
-            <% @user.student_granted_organizations.each do |organization| %>
-              <div class="col-md-4 text-center">
-                <%= image_tag(organization.banner_url, width: '100%', class: 'pull-left') %>
-                <p><%= organization.name %></p>
-              </div>
-            <% end %>
-          </div>
-          <div class="row">
-            <%= t :delete_account_confirmation_request %> <i><%= t :delete_account_confirmation_text %></i>.
-          </div>
-          <div class="row">
-            <%= form_with url: submit_url do |f| %>
-              <div class="form-group">
+            <%= form_with class: 'mu-form', url: delete_request_user_path do |f| %>
+              <fieldset class="form-group">
                 <input class="form-control" type="text" id="confirm-delete-input" autocomplete="off" onkeyup="checkConfirmationText()">
-              </div>
-              <%= f.submit t(:delete_account_agree), class: 'btn btn-danger', id: 'delete-account-button', disabled: true %>
+              </fieldset>
+              <%= f.submit t(:delete_account_agree), class: 'btn btn-danger w-100', id: 'delete-account-button', disabled: true %>
             <% end %>
           </div>
         </div>
